# stokkTrakk

./: .demo_env  .env  config.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1d06fe7cdde5_.py  6e08a27d0501_.py  9b27b177d6bb_.py  adbdc073eb15_.py
src/auth/: models.py  schemas.py
src/core/: db.py  dependencies.py  exceptions.py  literals.py  mock.py  types.py
src/portfolio/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
