[project]
name = "stocktracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
